--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,7 +7,17 @@
             <h1><a href="/">Assign 1 Blogg</a></h1>
         </div>
 
-        {{ posts }}
+        <div>
+            <h1><a href="/">Django Girls Blog</a></h1>
+        </div>
+        
+        {% for post in posts %}
+            <div>
+                <p>published: {{ post.published_date }}</p>
+                <h2><a href="">{{ post.title }}</a></h2>
+                <p>{{ post.text|linebreaksbr }}</p>
+            </div>
+        {% endfor %}
 
     </body>
 </html>
